# src/controllers/userController.ts
@@ -17,8 +17,13 @@ export const getAllUsers = async (req: Request, res: Response): Promise<void> =>
 
 export const createUser = async (req: Request, res: Response): Promise<void> => {
     try {
-        const userDto: CreateUserDto = req.body;
-        const user = await userService.createUser(userDto);
+        const {email, name, password, roleId}: CreateUserDto = req.body;
+        const user = await userService.createUser({
+            email,
+            name,
+            password,
+            userRoleId: roleId
+        });
         res.json(user);
 
     } catch (error) {
@@ -38,6 +43,18 @@ export const updateUser = async (req: Request, res: Response): Promise<void> => 
     }
 };
 
+export const updateUserRole = async (req: Request, res: Response): Promise<void> => {
+    try {
+        const id = +req.params.id;
+        const userDto = req.body;
+        const user = await userService.updateUserRole(id, userDto);
+
+        res.status(200).json({user});
+    } catch (error) {
+        res.status(500).json({error: error.message});
+    }
+};
+
 export const addProduct = async (req: Request, res: Response): Promise<void> => {
     try {
         const userId = +req.params.id;
@@ -49,6 +66,3 @@ export const addProduct = async (req: Request, res: Response): Promise<void> => 
         res.status(500).json({error: error.message});
     }
 };
-
-
-
